# 2017Challenges

./: .gitignore  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  NOTICE  README.md  Unittesting.md  helloworld.py  temp.py
_bin/: cpr  test
challenge_0/: README.MD  README.md  hello_world.py
challenge_0/csharp/: ross
challenge_0/java/: challenge_0
challenge_0/postscript/: hello_world.ps
challenge_0/python/: Hello_World_Lex  hello.py
challenge_1/: README.md
challenge_1/csharp/: ross
challenge_1/josephpd3/: README.md
challenge_1/python/: reverse.py
challenge_1/testfiles/: o1  o2  o3  o4  o5  t1  t2  t3  t4  t5
challenge_10/: README.md
challenge_10/testfiles/: t10  t11  t12  t13  t14  t5  t6  t7  t8  t9
challenge_10/tests/: test2
challenge_11/: README.md
challenge_11/testfiles/: o1  o2  o3  o4  t1  t2  t3  t4
challenge_12/: README.md
challenge_12/python/: README.md  challenge_12.py  test.py
challenge_13/: README.md
challenge_13/tests/: test2
challenge_14/: README.md
challenge_14/tests/: test1  test2  test3  test4
challenge_15/: README.md
challenge_16/: README.md
challenge_17/: README.md
challenge_18/: README.md  YPN_Paths.c
challenge_2/: README.md
challenge_2/testfiles/: t1  t2  t3  t4  t5
challenge_3/: README.md
challenge_4/: README.md
challenge_5/: README.md
challenge_5/haskell/nosewings/: README.md  challenge5.cabal
challenge_5/haskell/nosewings/src/: Main.hs
challenge_6/: README.md
challenge_7/: README.md  find_missing_num.py
challenge_8/: README.md
challenge_9/: README.md
challenge_example/: Challenge.md
(+1386 files in other folders)
