name:                challenge5
version:             0.1.0.0
author:              Nicholas Coltharp
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable challenge5
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , bytestring <=0.10.8.1
                     , vector >=0.7 && <=0.11.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
